--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="search_back_desc">Return to home page</string>
     <string name="search_hint">Search</string>
 
+    <string name="date_placeholder">DATE</string>
+
 </resources>
